--- a/index.html
+++ b/index.html
@@ -4,8 +4,56 @@
 <head>
   <title>Facebook Message Deleter</title>
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f0f2f5;
+      color: #333;
+    }
+
+    h1 {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    p {
+      text-align: center;
+    }
+
+    .center {
+      display: block;
+      margin: 20px auto;
+      text-align: center;
+    }
+
+    button {
+      padding: 10px 20px;
+      background-color: #4267B2;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #365899;
+    }
+
+    .checkbox-container {
+      text-align: center;
+    }
+
     #content {
       white-space: pre-wrap;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      max-width: 90%;
+      overflow-x: auto;
     }
   </style>
 </head>
@@ -15,8 +63,10 @@
   <p>For more information, visit the <a href="https://github.com/DanDanilyuk/facebook_message_deleter"
       target="_blank">GitHub repository</a>.</p>
 
-  <button onclick="copyToClipboard()">Copy to Clipboard</button>
-  <input type="checkbox" id="showCode" onclick="toggleCode()"> Show Code
+  <button class="center" onclick="copyToClipboard()">Copy to Clipboard</button>
+  <div class="checkbox-container">
+    <label><input type="checkbox" id="showCode" onclick="toggleCode()"> Show Code</label>
+  </div>
   <pre id="content" style="display: none">
     <script>
       window.onload = function () {
